packages/editors/tree-sitter-mx/test/corpus/misc.txt
===============
coma-after-open-tag
===============
div, class="a", id="c"

div,
    class="a",
    id="c"

div , class="a", id="c"

div ,
    class="a",
    id="c"

div
    ,class="a"
    ,id="c"

<div, class="a", id="c"/>

<div,
    class="a",
    id="c"/>

<div , class="a", id="c"/>

<div ,
    class="a",
    id="c"/>

<div
    ,class="a"
    ,id="c"/>

---------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end_self)
    (element_end)))

===============
comma-after-tag-variable
===============
<let/x,y=1/>
<let/x ,y=1/>
<let/x, y=1/>
<let/x , y=1/>

---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (tag_var
      (tag_var_expr
        (var_pattern)))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (tag_var
      (tag_var_expr
        (var_pattern)))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (tag_var
      (tag_var_expr
        (var_pattern)))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (tag_var
      (tag_var_expr
        (var_pattern)))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end_self)
    (element_end)))

===============
comma-ends-attr-operators
===============
<div foo = 1, +2 = true></div>
---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

===============
ignoreNonstandardStringPlaceholders
===============
<div data-foo="Hello ${foo}"></div>
---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

===============
invalid-tag-types-after-args
===============
div<T>(a) y
---------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (type_args
      (type_open)
      (type_expr)
      (type_close))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (attr_name)
    (concise_open_tag_end)
    (element_end)))

===============
multi-line-attrs
===============
<custom-tag
  data-attr-a
  data-attr-b
  data-attr-c
  data-attr-d
  data-attr-e
  preserve-attr-a
  not-preserve-attr-a
/>

---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_name)
    (attr_name)
    (attr_name)
    (attr_name)
    (attr_name)
    (attr_name)
    (open_tag_end_self)
    (element_end)))

===============
multiple-tags-on-line-close-next
===============
<span></span><div>
</div>

---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (open_tag_end)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (open_tag_end)
    (text)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

===============
param-tag
===============
<for|x, y, { destrucure=default }| of=array></for>
---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (params
      (params_open)
      (params_expr
        (param
          (param_pattern))
        (param
          (param_pattern))
        (param
          (param_pattern)))
      (params_close))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

===============
simple-text-delimited
===============
---
test
---

---------------

(document
  (html_block
    (text)))

===============
strip-bom
===============
﻿<lasso-page package-path="./browser.json"/>

---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end_self)
    (element_end)))

===============
void-tag-self-closed
===============
<div><img/></div>

---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (open_tag_end)
    (element
      (open_tag_start)
      (tag_name
        (tag_name_fragment))
      (open_tag_end_self)
      (element_end))
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))
